--- a/resources/sass/admin/3-components/_sidebar.scss
+++ b/resources/sass/admin/3-components/_sidebar.scss
@@ -1,147 +1,217 @@
 .sidebar {
-  min-width: $sidebar-width;
-  max-width: $sidebar-width;
-  transition: $sidebar-transition;
-  direction: ltr;
-  background: $sidebar-bg;
+    min-width: $sidebar-width;
+    max-width: $sidebar-width;
+    transition: $sidebar-transition;
+    direction: ltr;
+    background: $sidebar-bg;
 }
 
 .sidebar-content {
-  transition: $sidebar-transition;
-  display: flex;
-  height: 100vh;
-  flex-direction: column;
-  background: $sidebar-bg;
+    transition: $sidebar-transition;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    background: $sidebar-bg;
 }
 
 .sidebar-nav {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  flex-grow: 1;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
+    flex-grow: 1;
 }
 
 // Sidebar links
 .sidebar-link,
 a.sidebar-link {
-  display: block;
-  padding: $sidebar-link-padding;
-  font-weight: $sidebar-link-font-weight;
-  transition: background .1s ease-in-out;
-  position: relative;
-  text-decoration: none;
-  cursor: pointer;
-  border-left-style: solid;
-  border-left-width: 3px;
-  color: $sidebar-link-color;
-  background: $sidebar-link-bg;
-  border-left-color: $sidebar-link-border-left-color;
+    display: block;
+    padding: $sidebar-link-padding;
+    font-weight: $sidebar-link-font-weight;
+    transition: background 0.1s ease-in-out;
+    position: relative;
+    text-decoration: none;
+    cursor: pointer;
+    border-left-style: solid;
+    border-left-width: 3px;
+    color: $sidebar-link-color;
+    background: $sidebar-link-bg;
+    border-left-color: $sidebar-link-border-left-color;
 
-  i,
-  svg {
-    margin-right: .75rem;
-    color: $sidebar-link-icon-color;
-  }
+    i,
+    svg {
+        margin-right: 0.75rem;
+        color: $sidebar-link-icon-color;
+    }
 }
 
 .sidebar-link:focus {
-  outline: 0;
+    outline: 0;
 }
 
 .sidebar-link:hover {
-  color: $sidebar-link-hover-color;
-  background: $sidebar-link-hover-bg;
-  border-left-color: $sidebar-link-hover-border-left-color;
+    color: $sidebar-link-hover-color;
+    background: $sidebar-link-hover-bg;
+    border-left-color: $sidebar-link-hover-border-left-color;
 
-  i,
-  svg {
-    color: $sidebar-link-icon-hover-color;
-  }
+    i,
+    svg {
+        color: $sidebar-link-icon-hover-color;
+    }
 }
 
 .sidebar-item.active > .sidebar-link,
 .sidebar-item.active .sidebar-link:hover {
-  color: $sidebar-link-active-color;
-  background: $sidebar-link-active-bg;
-  border-left-color: $sidebar-link-active-border-left-color;
+    color: $sidebar-link-active-color;
+    background: $sidebar-link-active-bg;
+    border-left-color: $sidebar-link-active-border-left-color;
 
-  i,
-  svg {
-    color: $sidebar-link-icon-active-color;
-  }
+    i,
+    svg {
+        color: $sidebar-link-icon-active-color;
+    }
 }
 
 // Sidebar brand
 .sidebar-brand {
-  font-weight: $sidebar-brand-font-weight;
-  font-size: $sidebar-brand-font-size;
-  padding: $sidebar-brand-padding-y $sidebar-brand-padding-x;
-  display: block;
-  color: $sidebar-brand-color;
-
-  &:hover {
-    text-decoration: none;
+    font-weight: $sidebar-brand-font-weight;
+    font-size: $sidebar-brand-font-size;
+    padding: $sidebar-brand-padding-y $sidebar-brand-padding-x;
+    display: block;
     color: $sidebar-brand-color;
-  }
 
-  &:focus {
-    outline: 0;
-  }
+    &:hover {
+        text-decoration: none;
+        color: $sidebar-brand-color;
+    }
+
+    &:focus {
+        outline: 0;
+    }
 }
 
 // Toggle states
 .sidebar-toggle {
-  cursor: pointer;
-  width: 26px;
-  height: 26px;
-  display: flex;
+    cursor: pointer;
+    width: 26px;
+    height: 26px;
+    display: flex;
 }
 
 .sidebar {
-  &.collapsed {
-    margin-left: -$sidebar-width;
-  }
-
-  // Workaround for IE bug, more info:
-  // https://stackoverflow.com/a/25850649
-  @media (min-width: 1px) and (max-width: #{map-get($grid-breakpoints, 'lg') - .02px}) {
-
-    // Sidebar default state (on mobile)
-    margin-left: -$sidebar-width;
-
-    // Sidebar collapsed state (on mobile)
     &.collapsed {
-      margin-left: 0;
+        margin-left: -$sidebar-width;
     }
-  }
+
+    // Workaround for IE bug, more info:
+    // https://stackoverflow.com/a/25850649
+    @media (min-width: 1px) and (max-width: #{map-get($grid-breakpoints, 'lg') - .02px}) {
+        // Sidebar default state (on mobile)
+        margin-left: -$sidebar-width;
+
+        // Sidebar collapsed state (on mobile)
+        &.collapsed {
+            margin-left: 0;
+        }
+    }
 }
 
 .sidebar-toggle {
-  margin-right: $spacer;
+    margin-right: $spacer;
 }
 
 // Sidebar header
 .sidebar-header {
-  background: transparent;
-  padding: $sidebar-header-padding;
-  font-size: $sidebar-header-font-size;
-  color: $sidebar-header-color;
+    background: transparent;
+    padding: $sidebar-header-padding;
+    font-size: $sidebar-header-font-size;
+    color: $sidebar-header-color;
 }
 
 // Badge
 .sidebar-badge {
-  position: absolute;
-  right: 15px;
-  top: 14px;
-  z-index: 1;
+    position: absolute;
+    right: 15px;
+    top: 14px;
+    z-index: 1;
 }
 
 // Sidebar bottom
 .sidebar-cta-content {
-  padding: $sidebar-cta-padding;
-  margin: $sidebar-cta-margin;
-  border-radius: $sidebar-cta-border-radius;
+    padding: $sidebar-cta-padding;
+    margin: $sidebar-cta-margin;
+    border-radius: $sidebar-cta-border-radius;
 
-  background: $sidebar-cta-bg;
-  color: $sidebar-cta-color;
+    background: $sidebar-cta-bg;
+    color: $sidebar-cta-color;
+}
+
+/* SCSS untuk Sidebar Dropdown */
+.sidebar-dropdown {
+    padding-left: 40px;
+    li {
+        list-style-type: none;
+    }
+    a {
+        display: block;
+        padding: 10px;
+        text-decoration: none;
+        color: $sidebar-link-color;
+        &:hover {
+            color: $sidebar-link-active-color;
+        }
+    }
+    .collapse {
+        padding-left: 20px;
+    }
+
+    // Sesuaikan warna ikon tanda panah sesuai kebutuhan
+    &.collapsed,
+    a::before {
+        color: $sidebar-link-color;
+    }
+}
+
+/*******************
+Down arrow
+******************/
+.sidebar-nav .has-arrow {
+    position: relative;
+
+    &::after {
+        position: absolute;
+        content: "";
+        width: 7px;
+        height: 7px;
+        border-width: 1px 0 0 1px;
+        border-style: solid;
+        border-color: $sidebar-text;
+        margin-left: 10px;
+        -webkit-transform: rotate(223deg) translate(0, -50%);
+        -ms-transform: rotate(223deg) translate(0, -50%);
+        -o-transform: rotate(223deg) translate(0, -50%);
+        transform: rotate(223deg) translate(0, -50%);
+        -webkit-transform-origin: top;
+        -ms-transform-origin: top;
+        -o-transform-origin: top;
+        transform-origin: top;
+        top: 27px;
+        right: 15px;
+        -webkit-transition: all 0.3s ease-out;
+        -o-transition: all 0.3s ease-out;
+        transition: all 0.3s ease-out;
+    }
+}
+
+.sidebar-nav li.active > .has-arrow::after,
+.sidebar-nav li > .has-arrow.active::after,
+.sidebar-nav .has-arrow[aria-expanded="true"]::after {
+    -webkit-transform: rotate(44deg) translate(0, -50%);
+    -ms-transform: rotate(44deg) translate(0, -50%);
+    -o-transform: rotate(44deg) translate(0, -50%);
+    transform: rotate(44deg) translate(0, -50%);
+}
+
+.sidebar-nav li.selected > .has-arrow::after,
+.sidebar-nav li.selected > .has-arrow.active::after {
+    border-color: $white;
 }
