--- a/resources/sass/app.css
+++ b/resources/sass/app.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.bunny.net/css?family=Nunito");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
@@ -11978,8 +11978,63 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+body {
+  font-family: "Poppins", sans-serif;
+}
+
 .page-content {
   margin-top: 100px;
+}
+
+footer {
+  border-top: 1px solid #e4e4e4;
+  margin-top: 150px;
+}
+footer p {
+  color: #979797;
+}
+
+.form-control {
+  background-color: #f3f3f3;
+}
+
+header {
+  background-color: #332c2b;
+}
+header .navbar {
+  color: #fff;
+}
+header .navbar .bg-dark {
+  background-color: #332c2b;
+}
+header .navbar .nav-link {
+  margin-right: 15px;
+  color: #fff;
+}
+header .navbar .nav-link:hover {
+  color: #ffc107;
+}
+header .navbar .nav-link.active {
+  color: #ffc107;
+}
+
+.navbar-form .form-control {
+  background-color: #ffffff;
+  border-color: #ffc107;
+}
+
+.login-btn {
+  background-color: #ffc107;
+}
+
+.register-btn {
+  color: #fff;
+  border: 1px solid #ffc107;
+  background-color: #332c2b;
+}
+.register-btn:hover {
+  background-color: #ffc107;
+  color: #fff;
 }
 
 #page-auth {
