--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,5 @@
 // Fonts
-@import url('https://fonts.bunny.net/css?family=Nunito');
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap");
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
@@ -9,6 +8,10 @@
 @import 'variables';
 @import "fonts";
 @import 'global';
+
+
+// component
+@import 'components/navbar';
 
 @import "pages/main";
 @import "pages/auth";
