--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -1,3 +1,207 @@
-// .page-home {
-    
-// }
+.page-home {
+    .store-carousel {
+        .carousel-item {
+            img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    }
+
+    .section-title {
+        color: #35363a;
+        text-align: center;
+        font-size: 30px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+
+    .section-subtitle {
+        color: #000;
+        text-align: center;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        margin-top: 20px;
+        margin-bottom: 50px;
+    }
+
+    .store-carousel {
+        .btn-get-started {
+            width: 150px;
+            height: 48px;
+            flex-shrink: 0;
+            border-radius: 8px;
+            color: #fff;
+            background-color: #e2d600;
+        }
+    }
+
+    .about-us {
+        padding: 80px 0;
+        overflow: hidden;
+        .about-content {
+            margin-top: 50px;
+            img {
+                border-radius: 5px;
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    .custom-btn {
+        display: block;
+        width: 200px;
+        margin: 20px auto;
+        padding: 10px 20px;
+        border-radius: 5px;
+        background: #e2d600;
+        color: #fff;
+        text-decoration: none;
+        text-align: center;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+        transition: background 0.3s ease, color 0.3s ease, border 0.3s ease;
+    }
+
+    .custom-btn:hover {
+        background: #fff;
+        color: #35363a;
+        border: 1px solid #e2d600;
+    }
+
+    .services {
+        padding: 80px 0;
+        overflow: hidden;
+        .section-bg {
+            background-color: #e0e0e0;
+        }
+        .grid-item {
+            position: relative;
+            width: 100%;
+            height: 200px;
+            border-radius: 5px;
+            overflow: hidden;
+            margin-bottom: 10px;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                background: linear-gradient(
+                    0deg,
+                    rgba(0, 0, 0, 0.5) 0%,
+                    rgba(0, 0, 0, 0.5) 100%
+                );
+                transition: transform 0.3s ease;
+            }
+
+            .overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                opacity: 0;
+                transition: opacity 0.3s ease;
+            }
+
+            .text-overlay {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 100%;
+                text-align: center;
+                padding: 10px;
+                color: white;
+            }
+        }
+
+        .grid-item:hover .overlay {
+            opacity: 1;
+        }
+
+        .grid-item:hover img {
+            transform: scale(1.1);
+        }
+    }
+
+    /* Media queries for responsiveness */
+    @media (min-width: 578px) {
+        .grid-item {
+            width: calc(50% - 10px);
+        }
+    }
+
+    @media (min-width: 768px) {
+        .grid-item {
+            width: calc(33.33% - 10px);
+        }
+    }
+
+    @media (min-width: 1024px) {
+        .grid-item {
+            width: calc(20% - 10px);
+        }
+    }
+
+    .cta {
+        background: linear-gradient(
+                rgba(169, 169, 169, 0.5),
+                rgba(169, 169, 169, 0.5)
+            ),
+            url("/public/images/about-image.png") fixed center center;
+        background-size: cover;
+        padding: 100px 0;
+
+        h3 {
+            color: #35363a;
+            font-size: 28px;
+            font-weight: 700;
+        }
+
+        p {
+            color: #35363a;
+        }
+
+        .cta-btn {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            letter-spacing: 1px;
+            display: inline-block;
+            padding: 12px 40px;
+            border-radius: 50px;
+            transition: 0.5s;
+            margin: 10px;
+            border: 2px solid #35363a;
+            color: #35363a;
+        }
+
+        .cta-btn:hover {
+            color: #fff;
+            background: #e2d600;
+            border: 2px solid #e2d600;
+        }
+    }
+
+    @media (max-width: 1024px) {
+        .cta {
+            background-attachment: scroll;
+        }
+    }
+
+    @media (min-width: 769px) {
+        .cta .cta-btn-container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+        }
+    }
+}
