--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -204,4 +204,9 @@
             justify-content: flex-end;
         }
     }
+
+    .contact-us {
+        padding: 50px;
+        background-color: #e2e2e2;
+    }
 }
