--- a/resources/sass/pages/_product.scss
+++ b/resources/sass/pages/_product.scss
@@ -1,99 +1,140 @@
 .page-product {
-    .product-content {
-        .product-card {
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+.product-content {
+    .product-card {
+        text-align: center;
+        margin-bottom: 20px;
+        border: 1px solid #ddd;
+        max-width: 200px; /* Ukuran kartu */
+        width: 100%;
+        height: 260px;
+
+        .product-title {
+            color: #000;
             text-align: center;
-            margin-bottom: 20px;
-            border: 1px solid #ddd;
-            max-width: 200px; /* Ukuran kartu */
-            width: 100%;
-            height: 260px;
+            font-size: 18px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
 
-            .product-title {
-                color: #000;
-                text-align: center;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: normal;
-            }
+        .product-price {
+            color: #ffc107;
+            text-align: center;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+    }
 
-            .product-price {
-                color: #e2d600;
-                text-align: center;
-                font-size: 14px;
-                font-style: normal;
-                font-weight: 400;
-                line-height: normal;
+    .products-thumbnail {
+        width: 100%;
+        height: 150px;
+        border-radius: 8px;
+        overflow: hidden;
+        position: relative;
+        z-index: 1;
+
+        &:hover,
+        &:focus {
+            .products-image {
+                transform: scale(1.1);
             }
         }
 
-        .product-image {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-            transition: transform 0.5s;
-        }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
+        .products-image {
             width: 100%;
             height: 100%;
-            background: rgba(
-                0,
-                0,
-                0,
-                0.5
-            ); /* Warna overlay (hitam dengan kejernihan 0.5) */
-            opacity: 0;
-            transition: opacity 0.5s;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .product-card:hover .overlay {
-            opacity: 1; /* Menampilkan overlay saat dihover */
-        }
-
-        .product-card:hover .product-image {
-            transform: scale(
-                1.1
-            ); /* Memberikan efek zoom pada gambar saat dihover */
-        }
-
-        .text-overlay {
-            color: #fff;
-            text-align: center;
+            background-color: #ddd;
+            background-position: center;
+            background-size: cover;
+            background-repeat: no-repeat;
+            transition: all 0.3s ease;
         }
     }
+}
 
-    @media (max-width: 1024px) {
-        .product-card {
-            max-width: 33%; /* Tiga kartu per baris pada layar 1024px */
-            height: auto;
-        }
+@media (max-width: 1024px) {
+    .product-card {
+        max-width: 33%; /* Tiga kartu per baris pada layar 1024px */
+        height: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .product-card {
+        max-width: 50%; /* Dua kartu per baris pada layar 768px */
+        height: auto;
+    }
+}
+
+.category-sidebar {
+    width: 300px;
+    height: 450px;
+    background-color: #35363a;
+    border-radius: 5px;
+    box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.25);
+
+    .text-wrapper {
+        font-weight: 400;
+        color: #f3f3f3;
+        font-size: 16px;
+        // text-align: center;
+        letter-spacing: 0;
+        line-height: normal;
+        padding-top: 10px;
+        padding-left: 10px;
     }
 
-    @media (max-width: 768px) {
-        .product-card {
-            max-width: 50%; /* Dua kartu per baris pada layar 768px */
-            height: auto;
-        }
+    form {
+        padding: 5px 10px;
     }
 
-    .category-sidebar {
-        border-radius: 5px;
-        padding: 0;
-        background: #35363a;
-        box-shadow: 0px 5px 5px 2px rgba(0, 0, 0, 0.25);
+    .form-control {
+        background-color: #fff;
+        border-color: #ffc107;
     }
 
-    .store-new-products{
-        .page-title {
-            padding-bottom: 20px;
+    .list-group-categories {
+        padding: 0 15px;
+
+        .list-item {
+            list-style-type: none;
+            width: fit-content;
+            margin: 10px 0;
         }
+
+        .item-link {
+            text-decoration: none;
+            font-weight: 400;
+            color: #ffffff;
+            font-size: 16px;
+            letter-spacing: 0;
+            line-height: normal;
+            transition: color 0.3s ease;
+        }
+
+        .item-link:hover {
+            color: #ffc107;
+        }
+
+        .item-link:active {
+            color: #ffc107;
+        }
+
+        .item-link.active {
+            color: #ffc107;
+        }
+    }
+}
+
+.store-new-products {
+    .page-title {
+        padding-bottom: 20px;
     }
 }
